[package]
name = "sitemapper"
description = "CLI tool for generating sitemaps."
version = "0.0.4"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4"
env_logger = "0.10.2"
headless_chrome = "1.0.7"
scraper = "0.19.1"
sitemap = "0.4.1"
chrono = "0.4.38"
url = "2.5.2"
